# src/main/java/api/bpartners/annotator/endpoint/rest/controller/mapper/AnnotationBatchReviewMapper.java
@@ -21,6 +21,7 @@ public class AnnotationBatchReviewMapper {
         .id(domain.getId())
         .annotationBatchId(domain.getAnnotationBatchId())
         .status(reviewStatusMapper.toRest(domain.getStatus()))
+        .creationDatetime(domain.getCreationDatetime())
         .reviews(reviews);
   }
 
